k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: appprod
spec:
  ports:
    - port: 3306
  selector:
    app: db
