k8s/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: appprod
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
